--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,6 +15,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Set-up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.15.1'
+
       - name: Install and Build
         run:
           npm install
