--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.51.1",
-    "react-json-view": "^1.21.3",
+    "react-json-tree": "^0.18.0",
     "styled-components": "^6.1.8",
     "zustand": "^4.5.2"
   },
