--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,6 +7,10 @@ on:
     # Review gh actions docs if you want to further define triggers, paths, etc
     # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on
 
+env:
+  PAAS_BASE_URL: ${{ secrets.PAAS_BASE_URL }}
+  GATEWAY_BASE_URL: ${{ secrets.GATEWAY_BASE_URL }}
+
 jobs:
   build:
     name: Build Docusaurus
